--- a/src/assets/styles/transition.scss
+++ b/src/assets/styles/transition.scss
@@ -40,3 +40,15 @@
     transform: translateX(20px);
   }
 }
+.slide-down {
+  &-enter-active,
+  &-leave-active {
+    max-height: 230px;
+    transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  &-enter,
+  &-leave-to {
+    opacity: 0;
+    max-height: 0px;
+  }
+}
